--- a/Infinity Games/projeto infinity/src/view/Perfil.form
+++ b/Infinity Games/projeto infinity/src/view/Perfil.form
@@ -222,8 +222,8 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="2" rowCount="4">
-                <Column editable="false" title="" type="java.lang.Object"/>
-                <Column editable="false" title="" type="java.lang.Object"/>
+                <Column editable="false" title="Jogo" type="java.lang.Object"/>
+                <Column editable="false" title="C&#xf3;digo de ativa&#xe7;&#xe3;o" type="java.lang.Object"/>
               </Table>
             </Property>
             <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
